force-app/main/default/objects/Lease_Inquiry__c/Lease_Inquiry__c.object-meta.xml
<CustomObject>
    <description>One leasing inquiry from a broker-introduced prospect, tracked from inquiry to signed lease. Records are never deleted; closing changes Status.</description>
    <label>Lease Inquiry</label>
    <pluralLabel>Lease Inquiries</pluralLabel>
    <nameField>
        <displayFormat>LI-{0000}</displayFormat>
        <label>Inquiry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>