force-app/main/default/objects/Lease_Inquiry__c/fields/Aging__c.field-meta.xml
<CustomField>
    <fullName>Aging__c</fullName>
    <description>Colour-coded aging signal so the days-in-stage health shows on native Kanban cards and list views. Thresholds: over 14 days Overdue, over 7 days Aging.</description>
    <label>Aging</label>
    <formula>IF(OR(ISPICKVAL(Status__c, "Closed Won"), ISPICKVAL(Status__c, "Closed Lost")), "🟢 Signed", IF(ISBLANK(Stage_Start_Date__c), "🟢 On track", IF((TODAY() - Stage_Start_Date__c) &gt; 14, "🔴 Overdue", IF((TODAY() - Stage_Start_Date__c) &gt; 7, "🟡 Aging", "🟢 On track"))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>