force-app/main/default/objects/Lease_Inquiry__c/fields/Base_Rent__c.field-meta.xml
<CustomField>
    <fullName>Base_Rent__c</fullName>
    <description>Locked LOI term. Free-form so it can carry the rent structure, e.g. &quot;$34.00 / sq ft NNN&quot;.</description>
    <label>Base Rent</label>
    <length>60</length>
    <type>Text</type>
</CustomField>