force-app/main/default/objects/Lease_Inquiry__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lease Inquiries</relationshipLabel>
    <relationshipName>Lease_Inquiries</relationshipName>
    <type>Lookup</type>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <errorMessage>The selected Contact is not flagged as a broker (Is_Broker__c).</errorMessage>
        <filterItems>
            <field>Contact.Is_Broker__c</field>
            <operation>equals</operation>
            <value>true</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
</CustomField>