force-app/main/default/objects/Lease_Inquiry__c/fields/Broker_Firm__c.field-meta.xml
<CustomField>
    <fullName>Broker_Firm__c</fullName>
    <label>Broker Firm</label>
    <formula>Broker__r.Broker_Firm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>