force-app/main/default/objects/Lease_Inquiry__c/fields/Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Commencement_Date__c</fullName>
    <description>Locked LOI term: lease commencement date.</description>
    <label>Commencement</label>
    <type>Date</type>
</CustomField>