force-app/main/default/objects/Lease_Inquiry__c/fields/Days_In_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Stage__c</fullName>
    <formula>IF(OR(ISPICKVAL(Status__c, &quot;Closed Won&quot;), ISPICKVAL(Status__c, &quot;Closed Lost&quot;)), 0, IF(ISBLANK(Stage_Start_Date__c), null, TODAY() - Stage_Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>