force-app/main/default/objects/Lease_Inquiry__c/fields/Days_To_Sign__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Sign__c</fullName>
    <label>Days To Sign</label>
    <formula>Signed_Date__c - Inquiry_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>