force-app/main/default/objects/Lease_Inquiry__c/fields/Free_Rent__c.field-meta.xml
<CustomField>
    <fullName>Free_Rent__c</fullName>
    <description>Locked LOI term, e.g. &quot;4 months&quot;.</description>
    <label>Free Rent</label>
    <length>30</length>
    <type>Text</type>
</CustomField>