force-app/main/default/objects/Lease_Inquiry__c/fields/Free_Rent_Months__c.field-meta.xml
<CustomField>
    <fullName>Free_Rent_Months__c</fullName>
    <description>Locked LOI free-rent period in whole months. Typed Number replacement for the legacy Text Free_Rent__c (ARCHITECTURE.md §1 rule 9 — a scalar quantity must not be stored as Text). Canonical unit = months.</description>
    <label>Free Rent (Months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>