force-app/main/default/objects/Lease_Inquiry__c/fields/Handling_Person__c.field-meta.xml
<CustomField>
    <fullName>Handling_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Handling Person</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Lease Inquiries</relationshipLabel>
    <relationshipName>Lease_Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>