force-app/main/default/objects/Lease_Inquiry__c/fields/Initial_Notes__c.field-meta.xml
<CustomField>
    <fullName>Initial_Notes__c</fullName>
    <description>How the inquiry came in. Seeds the first negotiation-log entry when the record is created.</description>
    <label>Initial Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>