force-app/main/default/objects/Lease_Inquiry__c/fields/Inquiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Date__c</fullName>
    <label>Inquiry Date</label>
    <type>Date</type>
</CustomField>