force-app/main/default/objects/Lease_Inquiry__c/fields/Lease_Term__c.field-meta.xml
<CustomField>
    <fullName>Lease_Term__c</fullName>
    <description>Locked LOI term, e.g. &quot;7 years&quot;.</description>
    <label>Lease Term</label>
    <length>30</length>
    <type>Text</type>
</CustomField>