force-app/main/default/objects/Lease_Inquiry__c/fields/Lease_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Lease_Term_Months__c</fullName>
    <description>Locked LOI lease term in whole months. Typed Number replacement for the legacy Text Lease_Term__c (ARCHITECTURE.md §1 rule 9 — a scalar quantity must not be stored as Text). Canonical unit = months.</description>
    <label>Lease Term (Months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>