force-app/main/default/objects/Lease_Inquiry__c/fields/LOI_Date__c.field-meta.xml
<CustomField>
    <fullName>LOI_Date__c</fullName>
    <label>LOI Submitted</label>
    <type>Date</type>
</CustomField>