force-app/main/default/objects/Lease_Inquiry__c/fields/OneDrive_URL__c.field-meta.xml
<CustomField>
    <fullName>OneDrive_URL__c</fullName>
    <description>Link to the tenant/deal OneDrive folder.</description>
    <inlineHelpText>Paste the OneDrive folder link for this lease inquiry.</inlineHelpText>
    <label>OneDrive URL</label>
    <type>Url</type>
</CustomField>