force-app/main/default/objects/Lease_Inquiry__c/fields/Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Date__c</fullName>
    <description>Date the lease was signed (stamped when Status becomes Closed Won). Drives the Signed Leases (YTD) metric.</description>
    <label>Signed Date</label>
    <type>Date</type>
</CustomField>