force-app/main/default/objects/Lease_Inquiry__c/fields/Space_Required__c.field-meta.xml
<CustomField>
    <fullName>Space_Required__c</fullName>
    <label>Space Required (sq ft)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>