force-app/main/default/objects/Lease_Inquiry__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Inquiry Received</fullName><default>true</default><label>Inquiry Received</label></value>
            <value><fullName>LOI Received</fullName><default>false</default><label>LOI Received</label></value>
            <value><fullName>LOI Negotiation</fullName><default>false</default><label>LOI Negotiation</label></value>
            <value><fullName>LOI Signed</fullName><default>false</default><label>LOI Signed</label></value>
            <value><fullName>Lease Drafting</fullName><default>false</default><label>Lease Drafting</label></value>
            <value><fullName>Lease Signed</fullName><default>false</default><label>Lease Signed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>