force-app/main/default/objects/Lease_Inquiry__c/fields/Stage_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_Start_Date__c</fullName>
    <description>The date the inquiry entered its current stage. Reset by the Stage Timer flow whenever Stage changes. Drives days-in-stage aging.</description>
    <label>Stage Start Date</label>
    <type>Date</type>
</CustomField>