force-app/main/default/objects/Lease_Inquiry__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>Closed Won</fullName><default>false</default><label>Closed Won</label></value>
            <value><fullName>Closed Lost</fullName><default>false</default><label>Closed Lost</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>