force-app/main/default/objects/Lease_Inquiry__c/fields/TI_Allowance__c.field-meta.xml
<CustomField>
    <fullName>TI_Allowance__c</fullName>
    <description>Locked LOI term (tenant improvement), e.g. &quot;$45.00 / sq ft&quot;.</description>
    <label>TI Allowance</label>
    <length>30</length>
    <type>Text</type>
</CustomField>