force-app/main/default/objects/Lease_Inquiry__c/listViews/Active_Pipeline.listView-meta.xml
<ListView>
    <fullName>Active_Pipeline</fullName>
    <columns>NAME</columns>
    <columns>Tenant_Name__c</columns>
    <columns>Property_Name__c</columns>
    <columns>Broker_Name__c</columns>
    <columns>Stage__c</columns>
    <columns>Ball_In_Court__c</columns>
    <columns>Days_In_Stage__c</columns>
    <columns>Aging__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Pipeline</label>
</ListView>