force-app/main/default/objects/Lease_Inquiry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tenant_Name__c</columns>
    <columns>Property_Name__c</columns>
    <columns>Broker_Name__c</columns>
    <columns>Stage__c</columns>
    <columns>Ball_In_Court__c</columns>
    <columns>Days_In_Stage__c</columns>
    <columns>Aging__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>