force-app/main/default/objects/Lease_Inquiry__c/listViews/Signed_Leases.listView-meta.xml
<ListView>
    <fullName>Signed_Leases</fullName>
    <columns>NAME</columns>
    <columns>Tenant_Name__c</columns>
    <columns>Property_Name__c</columns>
    <columns>Broker_Name__c</columns>
    <columns>Base_Rent__c</columns>
    <columns>Commencement_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </filters>
    <label>Signed Leases</label>
</ListView>